- Fixed IndexTool.java